# datashift

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/data_shift/: __init__.py  core.py  utils.py
src/data_shift/formats/: __init__.py  csv_handler.py  json_handler.py  sql_handler.py  xml_handler.py
tests/: test_core.py  test_formats.py  test_utils.py
