[project]
name = "datashift"
version = "0.1.0"
description = "Transform any data format into any other with one call, no schema"
readme = "README.md"
authors = [
    {name = "Rahul Gurujala", email = "rahul.gurujala@ra-solutions.in"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8.0"
dependencies = [
    "lxml>=5.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
xml = ["lxml>=5.3.1"]
dev = [
    "pytest>=7.0.0",
    "black>=23.9.1",
    "flake8>=5.0.4",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "lxml-stubs>=0.5.1",
]

[project.urls]
"Homepage" = "https://github.com/rahulgurujala/datashift.git"
"Bug Tracker" = "https://github.com/rahulgurujala/datashift.git/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/data_shift"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]


[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
